--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
   font-family: "Quicksand", serif;
 }
+/* global styles */
+section {
+  margin: 0 140px;
+}
 /* shared styles */
 .orange-color {
   color: orange;
@@ -73,8 +77,44 @@ nav {
   cursor: pointer;
   display: none;
 }
-
+/* banner section */
+.banner-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3.125rem;
+}
+.banner-description {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+  width: 50%;
+}
+.banner-description h1 {
+  font-size: 3.5rem;
+  font-weight: bold;
+}
+.banner-description p {
+  font-size: 1.25rem;
+}
+.banner-description button {
+  padding: 0.625rem 2.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: white;
+  background-color: black;
+  border-radius: 12px;
+  cursor: pointer;
+}
+.banner-image img {
+  width: 100%;
+}
 @media screen and (max-width: 576px) {
+  section {
+    margin: 0;
+    padding: 1rem;
+  }
   nav {
     margin: 0;
     padding: 1rem;
@@ -87,10 +127,25 @@ nav {
   }
   .hamburger {
     display: inline;
+  }
+
+  .banner-container {
+    flex-direction: column-reverse;
+  }
+  .banner-description {
+    padding: 0;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
+  section {
+    margin: 0;
+    padding: 1rem;
+  }
   nav {
     margin: 0;
     padding: 1rem;
@@ -103,5 +158,15 @@ nav {
   }
   .hamburger {
     display: inline;
+  }
+  .banner-container {
+    flex-direction: column-reverse;
+  }
+  .banner-description {
+    padding: 0;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
